fix roles and user creation

--- a/.env
+++ b/.env
@@ -1,6 +1,7 @@
 VITE_API_URL="/api"
 VITE_GOOGLE_CLIENT_ID="152387725695-889tu1sffj5kghue8j1c9b92bpbo6m1p.apps.googleusercontent.com"
 VITE_APP_ENV = 'staging'
+VITE_CPANEL_BASE_URL="https://hosting04.layerip.com:2083"
 
 # Get your token at https://dashboard.ngrok.com/get-started/your-authtoken
 NGROK_AUTHTOKEN=39KKJQpbILBrjj5u9oAQXPPtL8l_8a1fF13pv9hYcwDV34FMQ
